Stop stretching the logo

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -149,8 +149,6 @@ body {
           z-index: 11;
           a#logo-desktop-full {
             img {
-              width: 139px;
-              height: 80px;
               top: 15px;
               position: relative;
             }
